<resources>
    <string name="app_name">A_LevelWallet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="people">民族</string>
    <string name="birth">出生</string>
    <string name="byear">年</string>
    <string name="bmonth">月</string>
    <string name="bday">日</string>
    <string name="address">住址</string>
    <string name="idnumber">号码</string>
    <string name="authority">签发机关</string>
    <string name="validdate">有效期限</string>
    <string name="title_activity_add_bank_card">addbankcard</string>
    <string name="title_activity_bank_card_info">BankCardInfoActivity</string>
    <string name="title_activity_bank_card_confirm">BankCardConfirm</string>
    <string name="title_activity_scan_result">ScanResultActivity</string>
    <string name="title_activity_show_idcard_photo">ShowIDCardPhotoActivity</string>
    <string name="title_activity_my_qrcord">MyQRCordActivity</string>
</resources>
