<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_bg_clear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout02"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@drawable/pic_bg_text"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idnumber"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_idnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authority"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_authority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validdate"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/id_validdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/infonextbt"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bt_blue_selector"
            android:text="人脸识别"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_rerecognize"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bt_blue_selector"
            android:text="重新识别"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_showphoto"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bt_blue_selector"
            android:text="一键复印"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_getticket"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_blue_selector"
            android:text="一键取票"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>
